Updated HTML and CSS to give styling to the website.

--- a/index.html
+++ b/index.html
@@ -2,13 +2,30 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link href="https://fonts.googleapis.com/css2?family=Chelsea+Market&family=Roboto+Mono:wght@400;700&display=swap" rel="stylesheet">
 <!-- Link your CSS stylesheet -->
-    
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
-        Plan your Visit
-        Learn about the Park
-        Get Involved
+  <header>
+    <nav>
+      <a class="orange" href="">Plan your Visit</a><br>
+      <a class="blue" href="">Learn about the Park</a><br>
+      <a class="yellow" href="">Get Involved</a><br>
+    </nav>
+  </header>
+
+  <section class="top">
+    <div class="left">
+      <img src="assets/header_img.jpeg" alt="Sunrise Over the Mountains in Yosemite National Park">
+    </div>
+    <div class="right">
+      <h1>Yosemite National Park</h1>
+      <h2>Come explore California's Beautiful Wilderness.</h2>
+      <p>Always Open. Reservations are not available or required to enter the park</p>
+    </div>
+  </section>
+  
    
       
       "header_img.jpg"
